--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <script src="./script.js"></script>
-</body>
-</html>
+    <link rel="stylesheet" href="./style.css"/>
+  </head>
+  <body>
+    <main>
+      <h2 id="main-heading">Featured products</h2>
+      <section class="section">Hello world
+        <h3 id="second-h3"class="small heading">this is h3</h3>
+      </section>
+      <aside>this is aside</aside>
+      <section class="section">привет</section>
+    </main>
+    
+      <!-- <div id="wrapperdiv"> -->
+<div class="divclass">
+  <ul id = "wrapperul">
+  
+  </ul>
+</div>
+<!-- </div> -->
+
+<script src="./script.js"></script>
+ 
+    </body>
+    </html>
