--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+<main class ="mainclass">
+    <div class="container">
+        <div class="header">
+          <h1>To-Do List</h1>
+        </div>
+        <div class="form">
+          <input type="text" id="taskInput" placeholder="Enter new todo..." />
+          <button onclick="addTask()">Add Task</button>
+        </div>
+        <div class="tasks" id="taskList"></div>
+      </div>
+</main>
     <script src="./script.js"></script>
 </body>
 </html>
