--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <main class="mainclass">
+    <div class="container">
+      <div class="header">
+      <h2>TODO-LIST</h2>
+      </div>
+      <form action="" id="form">
+        <input type="text" placeholder="enter your task" id="user_input" />
+        <button type="submit">add</button>
+      </form>
+
+      <ul id="ul"></ul>
+    
+    </div>
+  </main>
     <script src="./script.js"></script>
-</body>
+  </body>
 </html>
