--- a/index.html
+++ b/index.html
@@ -4,8 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
-<body>
+<body>\
+
+
+
+<div class="title">
+  
+  <div class="input">
+  <label for="minutes"></label>
+  <input type="number"  id="minutes">
+  
+  <label for="seconds"></label>
+  <input type="number"  id="seconds">
+  </div>
+  <div class="content">
+    
+    <button id="restart">restart</button>
+    <h3 id="timerDisplay">00:00</h3>
+    <button id="start">start</button>
+  </div>
+  <h1 id="h3">Hello world</h1>  
+  </div>
+  <div id="divname"></div>
     <script src="./script.js"></script>
 </body>
 </html>
