--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+  <header id="headerclass">
+    <h3>ФОТО </h3>
+    <button id="buttonclass"> Добавить фото</button>
+</header>
+<ul id="ul">
+    
+</ul>
+
+    <h3 class = users>пользователи</h3>
+    <ul id="ulclass">
+
+</ul>
     <script src="./script.js"></script>
 </body>
 </html>
