--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
-  <body> 
- 
-    <section id="section"></section>
-
+  <body>
+    <div>
+        <h1 id="h1">TODO-LIST</h1>
+        <form id="form">
+          <input type="text" id="input" placeholder="Enter todo ..." />
+          <button id="button" type="submit">ADD-LIST</button>
+        </form>
+      </div>
+      <ul id="ul-list"></ul>
     <script src="./script.js"></script>
   </body>
 </html>
